--- a/static/mobile_main.css
+++ b/static/mobile_main.css
@@ -95,9 +95,13 @@ input.one {
 }
 
 .ellipse {
+    height: 56px;
+    width: 56px;
     margin-left: 2%;
     margin-right: 2%;
     float: left;
+    border: 1px solid transparent;
+    border-radius: 50px;
 }
 
 .inf1 {
