--- a/static/mobile_main.css
+++ b/static/mobile_main.css
@@ -408,6 +408,25 @@ input.one {
     margin-right: 44%;
 }
 
-#myDiv {
+.popup {
     display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+
+.myimg {
+    background: url(../static/vopr.png) 50% 50% no-repeat;
+    background-size: contain;
+    background-color: transparent;
+    border: transparent;
+    width: 27px;
+    height: 27px;
+    float: left;
+    margin-left: 50%;
+    margin-top: -10%;
 }
