--- a/templates/mobile_problems.html
+++ b/templates/mobile_problems.html
@@ -45,6 +45,21 @@
                     <h1 class="foto">Прикрепите фото</h1>
                     <button id="showImageBtn" class="myimg"></button>
                 </div>
+                <div class="foto-block">
+                    <h1 class="foto">Заполните информацию</h1>
+                    <button id="showImageBtn" class="myimg1"></button>
+                    <h1 class="inform">Бренд</h1>
+                    <input class="brein" type="text" placeholder="Введите бренд товара" />
+                    <h1 class="inform">Артикул товара</h1>
+                    <input class="brein" type="text" placeholder="Введите артикул товара"/>
+                    <h1 class="inform">Баркод товара</h1>
+                    <input class="brein" type="text" placeholder="Введите баркод товара"/>
+                </div>
+                <div class="foto-block">
+                    <h1 class="foto">Кратко опишите ситуацию</h1>
+                    <h1 class="inform">Объяснение</h1>
+                    <input class="brein" type="text" placeholder="Введите бренд товара" />
+                </div>
             </div>
         </div>
     </body>
