--- a/templates/try.html
+++ b/templates/try.html
@@ -1,32 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>RATE-THIS</title>
-        <link rel="stylesheet" href="../static/mobile_main.css" />
-
-    </head>
-    <style>
-
-        .popup {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: white;
-            padding: 20px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-        }
-
-        .popup img {
-            max-width: 100%;
-            max-height: 90vh;
-        }
-    </style>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RATE-THIS</title>
+    <link rel="stylesheet" href="../static/mobile_main.css" />
     <title>Image Popup</title>
 </head>
 <body>
@@ -43,9 +22,29 @@
                 <div class="problem">
                     <h1 class="fill-problem">Проблема с товаром</h1>
                     <h2 class="problem-text">Очень жаль что вы столкнулись с какой-то проблемой опишите, пожалуйста что произошло и прикрепите фото товара и его этикетки, как правильно сделать написанно в вопросе если он есть, если вам его не выдают, то просто опишите информацию</h2>
+                    <h1 class="foto">Прикрепите фото</h1>
                     <img src="../static/vopr.png"  id="showImageBtn" >
                     <div id="imagePopup" class="popup">
                     <img src="../static/one-block.png" alt="Popup Image">
+                </div>
+                <div class="foto-block">
+                    <h1 class="foto">Заполните информацию</h1>
+                    <div>
+                        <img src="../static/vopr.png"  id="showImageBtn1" >
+                        <div id="imagePopup1" class="popup1">
+                        <img src="../static/two-block.png" alt="Popup Image">
+                    </div>
+                    <h1 class="inform">Бренд</h1>
+                    <input class="brein" type="text" placeholder="Введите бренд товара" />
+                    <h1 class="inform">Артикул товара</h1>
+                    <input class="brein" type="text" placeholder="Введите артикул товара"/>
+                    <h1 class="inform">Баркод товара</h1>
+                    <input class="brein" type="text" placeholder="Введите баркод товара"/>
+                </div>
+                <div class="foto-block">
+                    <h1 class="foto">Кратко опишите ситуацию</h1>
+                    <h1 class="inform">Объяснение</h1>
+                    <input class="brein" type="text" />
                 </div>
                 </div>
             </div>
@@ -63,6 +62,21 @@
                 imagePopup.style.display = 'none';
             }
         });
+
+        const showImageBtn1 = document.getElementById('showImageBtn1');
+        const imagePopup1 = document.getElementById('imagePopup1');
+
+        showImageBtn1.addEventListener('click', () => {
+            imagePopup1.style.display = 'block';
+        });
+
+        document.addEventListener('click', (event) => {
+            if (event.target !== imagePopup1 && event.target !== showImageBtn1) {
+                imagePopup1.style.display = 'none';
+            }
+        });
+
+        
     </script>
 </body>
 </html>
