added uploading images

--- a/templates/mobile_product.html
+++ b/templates/mobile_product.html
@@ -32,12 +32,12 @@
                     <h1 class="fill">{{ product.name }}</h1>
                 </div>
             </div>
-            
+
             <div class="block-bottom">
                 <img class="screan" src="{{ product.img }}">
                 <div>
                     <button class="button"  name="Get_product" type="submit">Получил</button>
-                    <button class="button1" name="Dont_get" type="button">Не получил</button>
+                    <button class="button1" name="Dont_get" type="submit">Не получил</button>
                 </div>
                 <button class="button2" type="button">Не определил</button>
                 <div class="inform-box">
